Stop relying on sample.getCount() == null to tell us if we have a count, use new hasCount()